// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstanceDetailsFooter renders per snapshot when all card interactions are supported (ie, web) 1`] = `
<div
  className="foot"
>
  <div
    className="highlightButton"
  >
    <StyledIconBase
      ariaLabel="HighLight Buttons hidden"
      iconName="redEye"
    />
    <StyledLabelBase>
      HighLight Buttons hidden
    </StyledLabelBase>
  </div>
  <CardKebabMenuButton />
</div>
`;

exports[`InstanceDetailsFooter renders per snapshot when only UserConfig-agnostic card interactions are supported (ie, electron) 1`] = `
<div
  className="foot"
>
  <div
    className="highlightButton"
  >
    <StyledIconBase
      ariaLabel="HighLight Buttons hidden"
      iconName="redEye"
    />
    <StyledLabelBase>
      HighLight Buttons hidden
    </StyledLabelBase>
  </div>
  <CardKebabMenuButton />
</div>
`;

exports[`InstanceDetailsFooter renders per snapshot with highlightState="hidden" 1`] = `
<div
  className="foot"
>
  <div
    className="highlightButton"
  >
    <StyledIconBase
      ariaLabel="HighLight Buttons hidden"
      iconName="redEye"
    />
    <StyledLabelBase>
      HighLight Buttons hidden
    </StyledLabelBase>
  </div>
  <CardKebabMenuButton />
</div>
`;

exports[`InstanceDetailsFooter renders per snapshot with highlightState="unavailable" 1`] = `
<div
  className="foot"
>
  <div
    className="highlightButton"
  >
    <StyledIconBase
      ariaLabel="HighLight Buttons unavailable"
      iconName="redEye"
    />
    <StyledLabelBase>
      HighLight Buttons unavailable
    </StyledLabelBase>
  </div>
  <CardKebabMenuButton />
</div>
`;

exports[`InstanceDetailsFooter renders per snapshot with highlightState="visible" 1`] = `
<div
  className="foot"
>
  <div
    className="highlightButton"
  >
    <StyledIconBase
      ariaLabel="HighLight Buttons visible"
      iconName="redEye"
    />
    <StyledLabelBase>
      HighLight Buttons visible
    </StyledLabelBase>
  </div>
  <CardKebabMenuButton />
</div>
`;
